--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Inmueble";
 }
 
-<h1>Inicio ViewData["Title"]</h1>
+<h1>Inicio @ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Crear Nuevo ViewData["Title"]</a>
+    <a asp-action="Create">Crear Nuevo @ViewData["Title"]</a>
 </p>
 <table class="table">
     <thead>
