--- a/Views/Garante/Eliminar.cshtml
+++ b/Views/Garante/Eliminar.cshtml
@@ -1,4 +1,4 @@
-@model InmoNovara.Models.Inmueble
+@model InmoNovara.Models.Inquilino
 
 @{
     ViewData["Title"] = "Eliminar";
@@ -8,38 +8,43 @@
 
 <h3>Estas seguro que quieres eliminar?</h3>
 <div>
-    <h4>Inmueble</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdInmueble)
+            @Html.DisplayNameFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdInmueble)
+            @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tipo)
+            @Html.DisplayNameFor(model => model.Nombre)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tipo)
+            @Html.DisplayFor(model => model.Nombre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ambiente)
+            @Html.DisplayNameFor(model => model.Dni)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ambiente)
+            @Html.DisplayFor(model => model.Dni)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Tamaño)
+            @Html.DisplayNameFor(model => model.Direccion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Tamaño)
+            @Html.DisplayFor(model => model.Direccion)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPropietario)
+            @Html.DisplayNameFor(model => model.Correo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Propietario.Nombre) @Html.DisplayFor(model => model.Propietario.Apellido)
+            @Html.DisplayFor(model => model.Correo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Telefono)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Telefono)
         </dd>
     </dl>
     
