--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -61,9 +61,16 @@
                 @item.FechaFinal.ToShortDateString()
             </td>
             <td>
-                <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.IdContrato" title="Editar"><i class="fas fa-pencil-alt"></i></a>
-                <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
-                <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdContrato" title="Detalles"><i class="fas fa-book"></i></a>
+                <div>
+                    <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.IdContrato" title="Editar"><i class="fas fa-pencil-alt"></i></a>
+                    <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                    <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdContrato" title="Detalles"><i class="fas fa-book"></i></a>
+                </div>
+                <div>
+                    <a class="btn btn-success" asp-action="Pago" asp-route-id="@item.IdContrato" title="Pagar">Pagar</a>
+                </div>
+
+                
 
             </td>
         </tr>
