--- a/Views/Inmueble/Create.cshtml
+++ b/Views/Inmueble/Create.cshtml
@@ -11,6 +11,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Uso" class="control-label"></label>
+                <select name="form-control" name="Uso">
+                    <option value="Comercial">Comercial</option>
+                    <option value="Residencial">Residencial</option>
+                </select>
+                <span asp-validation-for="Uso" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
                 <input asp-for="Tipo" class="form-control" />
                 <span asp-validation-for="Tipo" class="text-danger"></span>
@@ -24,6 +32,11 @@
                 <label asp-for="Tamaño" class="control-label"></label>
                 <input asp-for="Tamaño" class="form-control" />
                 <span asp-validation-for="Tamaño" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Precio" class="control-label"></label>
+                <input asp-for="Precio" class="form-control" />
+                <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdPropietario" class="control-label"></label>
