--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Editar";
-    var Propietario = (List<Propietario>)ViewBag.propietarios;
+    var listaP = (List<Propietario>)ViewBag.propietarios;
 }
 
 <h1>Editar</h1>
@@ -13,6 +13,14 @@
     <div class="col-md-4">
         <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Uso" class="control-label"></label>
+                <select class="form-control" name="Uso" >
+                    <option value="Comercial">Comercial</option>
+                    <option value="Residencial">Residencial</option>
+                </select>
+                <span asp-validation-for="Uso" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
                 <input asp-for="Tipo" class="form-control" />
@@ -29,9 +37,14 @@
                 <span asp-validation-for="Tamaño" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Precio" class="control-label"></label>
+                <input asp-for="Precio" class="form-control" />
+                <span asp-validation-for="Precio" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label class="control-label"></label>
                 <select class="form-control" name="IdPropietario">
-                    @foreach (var item in Propietario)
+                    @foreach(var item in listaP)
                     {
                         @:<option @(item.Id==Model.IdPropietario ? "selected" : "") value="@item.Id">@(item.Nombre+" "+item.Apellido)</option>
                     }
