--- a/Views/Inmueble/Eliminar.cshtml
+++ b/Views/Inmueble/Eliminar.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.IdInmueble)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Uso)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Uso)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Tipo)
         </dt>
         <dd class = "col-sm-10">
@@ -34,6 +40,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Tamaño)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Precio)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Precio)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdPropietario)
