--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -16,6 +16,9 @@
                 @Html.DisplayNameFor(model => model.IdInmueble)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Uso)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Tipo)
             </th>
             <th>
@@ -23,6 +26,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Tamaño)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Precio)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IdPropietario)
@@ -37,6 +43,9 @@
                 @Html.DisplayFor(modelItem => item.IdInmueble)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Uso)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Tipo)
             </td>
             <td>
@@ -44,6 +53,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tamaño)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Precio)
             </td>
             <td>
                 @(item.Propietario.Nombre + " " + item.Propietario.Apellido)
