--- a/Views/Usuario/Login.cshtml
+++ b/Views/Usuario/Login.cshtml
@@ -2,5 +2,21 @@
 @{
 	ViewData["Title"] = "Acceso de usuarios";
 }
-@await Html.PartialAsync("_Login")
-
+<h4>Usuario</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Login">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <input type="email" name="" id="">
+            </div>
+            <div class="form-group">
+                <input type="password" name="" id="">
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
