--- a/Views/Usuario/Detalles.cshtml
+++ b/Views/Usuario/Detalles.cshtml
@@ -7,7 +7,7 @@
 <h1>Detalles</h1>
 
 <div>
-    <h4>Usuario</h4>
+    <h4>Detalles de @Html.DisplayFor(model => model.Nombre) @Html.DisplayFor(model => model.Apellido)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -35,18 +35,6 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Clave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rol)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RolNombre)
         </dt>
         <dd class = "col-sm-10">
@@ -55,6 +43,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-primary">Volver</a>
 </div>
+
