--- a/Views/Usuario/Eliminar.cshtml
+++ b/Views/Usuario/Eliminar.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro que quieres eliminar?</h3>
 <div>
     <h4>Usuario</h4>
     <hr />
@@ -36,18 +36,6 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Clave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rol)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rol)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RolNombre)
         </dt>
         <dd class = "col-sm-10">
@@ -56,7 +44,7 @@
     </dl>
     
     <form asp-action="Eliminar">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
+        <a class="btn btn-primary" asp-action="Index">Volver</a>
     </form>
 </div>
