--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -1,14 +1,13 @@
 @model IEnumerable<InmoNovara.Models.Usuario>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Usuario";
 }
 
-<h1>Index</h1>
+<h1>Inicio @ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
-    <a asp-action="Logout">Salir</a>
+    <a asp-action="Create">Crear Nuevo Usuario</a>
 </p>
 <table class="table">
     <thead>
@@ -24,12 +23,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Clave)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Rol)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.RolNombre)
@@ -51,12 +44,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Clave)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rol)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RolNombre)
