--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -43,9 +43,15 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
+				<label asp-for="AvatarFile" class="control-label"></label>
+				<input class="form-control" type="file" asp-for="AvatarFile" />
+				<span asp-validation-for="AvatarFile" class="text-danger"></span>
+			</div>
+            <div class="form-group">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
                 <a class="btn btn-primary" asp-action="Index">Volver</a>
             </div>
+
         </form>
     </div>
 </div>
