--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -42,6 +42,11 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
+				<label asp-for="AvatarFile" class="control-label"></label>
+				<input class="form-control" type="file" name="AvatarFile" />
+				<span asp-validation-for="AvatarFile" class="text-danger"></span>
+			</div>
+            <div class="form-group">
                 <input type="submit" value="Cambiar" class="btn btn-danger" />|
                 <a class="btn btn-primary" asp-action="Index">Volver</a>
             </div>
