--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
 				<label asp-for="AvatarFile" class="control-label"></label>
-				<input class="form-control" type="file" asp-for="AvatarFile" />
+				<input class="form-control" type="file" name="AvatarFile" />
 				<span asp-validation-for="AvatarFile" class="text-danger"></span>
 			</div>
             <div class="form-group">
