--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.Apellido)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Avatar)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -42,6 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Apellido)
             </td>
+            <td>
+				<img width="32" src="@item.Avatar" />
+			</td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
