--- a/Views/Garante/Eliminar.cshtml
+++ b/Views/Garante/Eliminar.cshtml
@@ -1,4 +1,4 @@
-@model InmoNovara.Models.Inquilino
+@model InmoNovara.Models.Garante
 
 @{
     ViewData["Title"] = "Eliminar";
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.IdGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.IdGarante)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
