--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Inmobiliaria InmoNovara";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Hello World!</p>                                                                                   
+<p>Bienvenido a InmoNovara!</p>
+<p>  Donde podremos ayudarte a encontrar los mejores precios y bienes raices!</p>
+                                                                                   
