--- a/Views/Garante/Editar.cshtml
+++ b/Views/Garante/Editar.cshtml
@@ -1,4 +1,4 @@
-@model InmoNovara.Models.Inquilino
+@model InmoNovara.Models.Garante
 
 @{
     ViewData["Title"] = "Editar";
@@ -6,7 +6,7 @@
 
 <h1>Editar</h1>
 
-<h4>Inquilino</h4>
+<h4>Garante</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
