--- a/Views/Inmueble/Create.cshtml
+++ b/Views/Inmueble/Create.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Uso" class="control-label"></label>
-                <select name="form-control" name="Uso">
+                <select class="form-control" name="Uso">
                     <option value="Comercial">Comercial</option>
                     <option value="Residencial">Residencial</option>
                 </select>
