--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -49,22 +49,26 @@
                 @Html.DisplayFor(modelItem => item.Tipo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ambiente)
+                @(item.Ambiente +" Ambientes")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Tamaño)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Precio)
+                @("$"+item.Precio)
             </td>
             <td>
                 @(item.Propietario.Nombre + " " + item.Propietario.Apellido)
             </td>
             <td>
                 <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.IdInmueble" title="Editar"><i class="fas fa-pencil-alt"></i></a>
-                <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
-                <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdInmueble" title="Detalles"><i class="fas fa-book"></i></a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdInmueble" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                }
 
+                <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdInmueble" title="Detalles"><i class="fas fa-book"></i></a>
+                <a class="btn btn-success" asp-action="Contratos" asp-route-id="@item.IdInmueble" title="Contratos"><i class="fas fa-scroll"></i></a>
             </td>
         </tr>
 }
