--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -62,7 +62,10 @@
             </td>
             <td>
                 <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.Id" title="Editar"><i class="fas fa-pencil-alt"></i></a>
-                <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.Id" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.Id" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                }
                 <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.Id" title="Detalles"><i class="fas fa-book"></i></a>
             </td>
         </tr>
