--- a/Views/Pago/Detalles.cshtml
+++ b/Views/Pago/Detalles.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Detalles";
 }
 
-<h1>Detalles</h1>
+<h1>Detalles De Pago</h1>
 
 <div>
-    <h4>Pago</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -23,7 +22,7 @@
             @Html.DisplayFor(model => model.IdContrato)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaPago)
+             @Html.DisplayFor(model => model.FechaPago.Day)/@Html.DisplayFor(model => model.FechaPago.Month)/@Html.DisplayFor(model => model.FechaPago.Year)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaPago)
