--- a/Views/Pago/Eliminar.cshtml
+++ b/Views/Pago/Eliminar.cshtml
@@ -3,12 +3,10 @@
 @{
     ViewData["Title"] = "Eliminar";
 }
-
 <h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro que quieres eliminar?</h3>
 <div>
-    <h4>Pago</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -27,7 +25,7 @@
             @Html.DisplayNameFor(model => model.FechaPago)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaPago)
+            @Html.DisplayFor(model => model.FechaPago.Day)/@Html.DisplayFor(model => model.FechaPago.Month)/@Html.DisplayFor(model => model.FechaPago.Year)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Importe)
