--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -1,13 +1,13 @@
 @model IEnumerable<InmoNovara.Models.Pago>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Pago";
 }
 
-<h1>Index</h1>
+<h1>Inicio @ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo @ViewData["Title"]</a>
 </p>
 <table class="table">
     <thead>
@@ -37,15 +37,19 @@
                 @Html.DisplayFor(modelItem => item.IdContrato)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FechaPago)
+                @item.FechaPago.ToShortDateString()
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Importe)
+                @("$"+item.Importe)
             </td>
             <td>
                 <div>
                     <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.IdPago" title="Editar"><i class="fas fa-pencil-alt"></i></a>
-                    <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                    @if (User.IsInRole("Administrador"))
+                    {
+                        <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
+                    }
+                    
                     <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdPago" title="Detalles"><i class="fas fa-book"></i></a>
                 </div>
             </td>
