--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,16 +13,16 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
                 @if (!User.Identity.IsAuthenticated)
 				{
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="">Iniciar seccion</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="">Iniciar sesión</a>
                             </li>
                         </ul>
                 }
@@ -36,32 +36,43 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Propietario" asp-action="">Propietario</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Propietario" asp-action="">Propietario</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Inquilino" asp-action="">Inquilino</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Inquilino" asp-action="">Inquilino</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Inmueble" asp-action="">Inmueble</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="">Inmueble</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Contrato" asp-action="">Contrato</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="">Contrato</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Garante" asp-action="">Garante</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Garante" asp-action="">Garante</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Pago" asp-action="">Pago</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="">Pago</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="">Usuario</a>
-                            </li>
+                           
+                            @if (User.IsInRole("Administrador"))
+                            {
+                                 <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="">Usuario</a>
+                                </li>
+                            }
+
+                            @if (User.IsInRole("Empleado"))
+                            {
+                                 <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Editar">Usuario</a>
+                                </li>
+                            }
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Logout">Cerrar seccion</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Logout">Cerrar sesión</a>
                             </li>
                         </ul>
                     </div>
