--- a/Views/Contrato/Create.cshtml
+++ b/Views/Contrato/Create.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="IdInmueble" class="control-label"></label>
                 <select class="form-control" name="IdInmueble">
                     @foreach (var item in (List<Inmueble>)ViewBag.inmueble)
                     {
@@ -52,7 +53,7 @@
                 <span asp-validation-for="FechaFinal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-success" />
                 <a class="btn btn-primary" asp-action="Index">Volver</a>
             </div>
         </form>
