--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Inicio @ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Crear Nuevo Garante</a>
+    <a asp-action="Create">Crear Nuevo Contrato</a>
 </p>
 <table class="table">
     <thead>
