--- a/Views/Pago/Detalles.cshtml
+++ b/Views/Pago/Detalles.cshtml
@@ -22,10 +22,10 @@
             @Html.DisplayFor(model => model.IdContrato)
         </dd>
         <dt class = "col-sm-2">
-             @Html.DisplayFor(model => model.FechaPago.Day)/@Html.DisplayFor(model => model.FechaPago.Month)/@Html.DisplayFor(model => model.FechaPago.Year)
+            @Html.DisplayNameFor(model => model.FechaPago)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaPago)
+             @Html.DisplayFor(model => model.FechaPago.Day)/@Html.DisplayFor(model => model.FechaPago.Month)/@Html.DisplayFor(model => model.FechaPago.Year)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Importe)
