--- a/Views/Propietario/Detalles.cshtml
+++ b/Views/Propietario/Detalles.cshtml
@@ -26,6 +26,12 @@
             @Html.DisplayNameFor(model => model.Dni)
         </dt>
         <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+                <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Dni)
         </dd>
         <dt class = "col-sm-2">
