--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -11,44 +11,75 @@
     <div class="col-md-4">
         <form asp-action="Editar" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <div class="">
+                <div class="">
+                    @* Nombre *@
+                    <div class="form-group">
+                        <label asp-for="Nombre" class="control-label"></label>
+                        <input asp-for="Nombre" class="form-control" />
+                        <span asp-validation-for="Nombre" class="text-danger"></span>
+                    </div>
+
+                    @* Apellido *@
+                    <div class="form-group">
+                        <label asp-for="Apellido" class="control-label"></label>
+                        <input asp-for="Apellido" class="form-control" />
+                        <span asp-validation-for="Apellido" class="text-danger"></span>
+                    </div>
+
+                    @* Email *@
+                    <div class="form-group">
+                        <label asp-for="Email" class="control-label"></label>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+                    @* clave *@
+                    <div class="form-group">
+                        <label asp-for="Clave" class="control-label"></label>
+                        <input asp-for="Clave" class="form-control" />
+                        <span asp-validation-for="Clave" class="text-danger"></span>
+                    </div>
+
+                    @* seleccionar rol *@
+                    @if(User.IsInRole("Administrador"))
+                    {
+                        <div class="form-group">
+                            <label asp-for="Rol" class="control-label"></label>
+                            <select class="form-control" name="Rol">
+                                @foreach (var rol in (IDictionary<int, string>)ViewBag.Roles)
+                                {
+                                    <option value="@rol.Key">@rol.Value</option>
+                                }
+                            </select>
+                            <span asp-validation-for="Rol" class="text-danger"></span>
+                        </div>
+                    }
+                </div>
+
+                @* Foto de perfil *@
+                <div class="">
+                    <div class="form-group">
+                        <label asp-for="AvatarFile" class="control-label"></label>
+                        <input class="form-control" type="file" name="AvatarFile" />
+                        <span asp-validation-for="AvatarFile" class="text-danger"></span>
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Rol" class="control-label"></label>
-                <select class="form-control" name="Rol">
-					@foreach (var rol in (IDictionary<int, string>)ViewBag.Roles)
-					{
-						<option value="@rol.Key">@rol.Value</option>
-					}
-				</select>
-                <span asp-validation-for="Rol" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-				<label asp-for="AvatarFile" class="control-label"></label>
-				<input class="form-control" type="file" name="AvatarFile" />
-				<span asp-validation-for="AvatarFile" class="text-danger"></span>
-			</div>
+
+
+            @* botones de cambiar o volver *@
             <div class="form-group">
                 <input type="submit" value="Cambiar" class="btn btn-danger" />|
-                <a class="btn btn-primary" asp-action="Index">Volver</a>
+                @if(User.IsInRole("Administrador"))
+                {
+                    <a class="btn btn-primary" asp-action="Index">Volver</a>
+                }
+                @if(User.IsInRole("Empleado"))
+                {
+                    <a class="btn btn-primary" asp-controller="Propietario" asp-action="Index">Volver</a>
+                }
             </div>
         </form>
     </div>
