--- a/Views/Contrato/Detalles.cshtml
+++ b/Views/Contrato/Detalles.cshtml
@@ -31,7 +31,7 @@
             @Html.DisplayNameFor(model => model.IdGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.garante.Nombre)
+            @Html.DisplayFor(model => model.garante.NombreGarante)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
