--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.inquilino.Dni)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.garante.Nombre)
+                @Html.DisplayFor(modelItem => item.garante.NombreGarante)
             </td>
             <td>
                 @item.FechaInicio.ToShortDateString()
