--- a/Views/Garante/Eliminar.cshtml
+++ b/Views/Garante/Eliminar.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.IdGarante)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.NombreGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
+            @Html.DisplayFor(model => model.NombreGarante)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Dni)
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Correo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
+            @Html.DisplayNameFor(model => model.TelefonoGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
+            @Html.DisplayFor(model => model.TelefonoGarante)
         </dd>
     </dl>
     
