--- a/Views/Garante/Detalles.cshtml
+++ b/Views/Garante/Detalles.cshtml
@@ -7,7 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>Detalles de @Html.DisplayFor(model => model.Nombre)</h4>
+    <h4>Detalles de @Html.DisplayFor(model => model.NombreGarante)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.IdGarante)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.NombreGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
+            @Html.DisplayFor(model => model.NombreGarante)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Dni)
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Correo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Telefono)
+            @Html.DisplayNameFor(model => model.TelefonoGarante)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Telefono)
+            @Html.DisplayFor(model => model.TelefonoGarante)
         </dd>
     </dl>
 </div>
