--- a/Views/Garante/Editar.cshtml
+++ b/Views/Garante/Editar.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+                <label asp-for="NombreGarante" class="control-label"></label>
+                <input asp-for="NombreGarante" class="form-control" />
+                <span asp-validation-for="NombreGarante" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Dni" class="control-label"></label>
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Correo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
+                <label asp-for="TelefonoGarante" class="control-label"></label>
+                <input asp-for="TelefonoGarante" class="form-control" />
+                <span asp-validation-for="TelefonoGarante" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Cambiar" class="btn btn-danger" />|
