--- a/Views/Inmueble/Contratos.cshtml
+++ b/Views/Inmueble/Contratos.cshtml
@@ -51,7 +51,7 @@
                 @Html.DisplayFor(modelItem => item.inquilino.Dni)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.garante.Nombre)
+                @Html.DisplayFor(modelItem => item.garante.NombreGarante)
             </td>
             <td>
                 @item.FechaInicio.ToShortDateString()
