--- a/Views/Inmueble/Create.cshtml
+++ b/Views/Inmueble/Create.cshtml
@@ -10,6 +10,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+             <div class="form-group">
+                <label asp-for="Direccion" class="control-label"></label>
+                <input asp-for="Direccion" class="form-control" />
+                <span asp-validation-for="Uso" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Uso" class="control-label"></label>
                 <select class="form-control" name="Uso">
@@ -37,6 +42,14 @@
                 <label asp-for="Precio" class="control-label"></label>
                 <input asp-for="Precio" class="form-control" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Estado" class="control-label"></label>
+                <select class="form-control" name="Estado">
+                    <option value="Disponible">Disponible</option>
+                    <option value="No Disponible">No Disponible</option>
+                </select>
+                <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdPropietario" class="control-label"></label>
