--- a/Views/Inmueble/Detalles.cshtml
+++ b/Views/Inmueble/Detalles.cshtml
@@ -17,6 +17,12 @@
             @Html.DisplayFor(model => model.IdInmueble)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Direccion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Direccion)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Uso)
         </dt>
         <dd class = "col-sm-10">
@@ -45,6 +51,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Precio)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Estado)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdPropietario)
