--- a/Views/Inmueble/Eliminar.cshtml
+++ b/Views/Inmueble/Eliminar.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.IdInmueble)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Direccion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Direccion)
+        </dd>    
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Uso)
         </dt>
         <dd class = "col-sm-10">
@@ -46,6 +52,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Precio)
+        </dd>
+                <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Estado)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdPropietario)
